# mcp-guardian

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  flake.nix  rename-components.sh  rename-files.sh  run.sh
.github/workflows/: main.yaml  release.yaml
_context_library/: BACKLOGGED.md  CYBERPUNK_BUTTON_PROTOTYPE.md  CYBERPUNK_CARD_PROTOTYPE.md  CYBERPUNK_VISUAL_SYSTEM.md  DEVELOPMENT_PLAN.md  DISCOVERY.md  GOALS.md  IMPLEMENTATION_STATUS.md  PHASE1-INTERJECT.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE3_ANIMATION_GUIDE.md  PHASE3_IMPLEMENTATION_STEPS.md  PHASE4.md  PHASE4_APP_INSIGHT.md  PHASE4_COMPONENTS.md  PHASE4_DISCOVERY.md  PHASE4_GUARD_PROFILE_BUILDER.md  PHASE4_INTERJECT.md  PHASE4_JSONMIGRATION.md  PHASE4_JSONSCHEMARUST.md  PHASE4_LIBRARIES.md  PHASE4_REACT_FLOW_NOTES.md  PHASE4_ROADMAP.md  PHASE4_SCHEMA_VALIDATION.md  PHASE4_VISUAL_CONCEPTS.md  STYLING_GUIDE.md  phase2-implementation-analysis.md  tailwind-migration-examples.md  tailwind-v4-app-css-example.css
_context_library/blog_posts/: enterprise_announcement.txt
_context_library/examples/: radix-components.md
_context_library/new-header/: header_design_doc.md  radix-nav-menu.md
development/: create_sample_messages  create_sample_messages.rs
docs/: Justfile  book.toml
docs/src/: SUMMARY.md  introduction.md  message_system.md  schema_system.md
docs/src/installing/: index.md  linux.md  macos.md  windows.md
docs/src/rust_crates/: index.md  mcp_guardian.md  mcp_guardian_cli.md  mcp_guardian_core.md  mcp_guardian_proxy.md
docs/src/tutorial/: create_guard_profile.md  create_mcp_server.md  create_server_collection.md  index.md
mcp-guardian/: CLAUDE.md  Justfile  package-lock.json  package.json  tailwind.config.js
mcp-guardian-cli/: Cargo.toml  Justfile
mcp-guardian-cli/src/: cli.rs  guard_profiles.rs  lib.rs  main.rs  mcp_servers.rs  server_collections.rs
mcp-guardian-cli/src/cli/: guard_profiles.rs  mcp_servers.rs  server_collections.rs
mcp-guardian-cli/src/cli/guard_profiles/: delete.rs  export.rs  get.rs  import.rs  list.rs  set.rs
mcp-guardian-cli/src/cli/mcp_servers/: delete.rs  get.rs  import.rs  list.rs  set.rs
mcp-guardian-cli/src/cli/server_collections/: apply_claude_config.rs  delete.rs  export_claude_config.rs  get.rs  list.rs  set.rs
mcp-guardian-core/: Cargo.toml  Justfile
mcp-guardian-core/bindings/: ChainGuardConfig.ts  FilterActionGuardConfig.ts  FilterGuardConfig.ts  FilterLogicGuardConfig.ts  GuardProfile.ts  ManualApprovalGuardConfig.ts  McpServer.ts  MessageInterceptorGuardConfig.ts  MessageLogGuardConfig.ts  NamedGuardProfile.ts  NamedMcpServer.ts  NamedServerCollection.ts  PyFuncGuardConfig.ts  Server.ts  ServerCollection.ts
mcp-guardian-core/src/: config.rs  dirs.rs  guard_profile.rs  lib.rs  mcp_server.rs  message.rs  message_approval.rs  message_interceptor.rs  proxy.rs  request_cache.rs  server_collection.rs
mcp-guardian-core/src/guard_profile/: chain.rs  filter.rs  manual_approval.rs  message_log.rs  py_func.rs
mcp-guardian-core/src/guard_profile/profiles/: approve-tool-call-requests.json  approve-tool-call-responses.json  block-get-current-time.json  default.json  log-only.json  mod.rs
mcp-guardian-core/src/mcp_server/servers/: mcpx.json  mod.rs
mcp-guardian-core/src/message_interceptor/: chain.rs  filter.rs  manual_approval.rs  message_log.rs  py_func.rs
mcp-guardian-core/src/message_interceptor/py_func/: mod.rs  sys_mcp_guardian.rs
mcp-guardian-core/src/proxy/: context.rs  message.rs  message_approval.rs  message_interceptor.rs  request_cache.rs
mcp-guardian-core/src/proxy/message_interceptor/: chain.rs  filter.rs  manual_approval.rs  message_log.rs
mcp-guardian-core/src/server_collection/: claude_config.rs
mcp-guardian-proxy/: Cargo.toml  Justfile
mcp-guardian-proxy/src/: cli.rs  main.rs
mcp-guardian-schema/: CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs
mcp-guardian-schema/schemas/: guard_profile_schema.json
mcp-guardian-schema/src/: guard_profile_schema.rs  lib.rs  main.rs  mcp_server_schema.rs  server_collection_schema.rs  utils.rs
mcp-guardian/src/: App.css  App.tsx  CLAUDE.md  bindings  main.tsx  utils.ts
mcp-guardian/src-tauri/: Cargo.toml  mcp-guardian-bundle-readme.md  tauri.conf.json
mcp-guardian/src-tauri/icons/: icon.icns
mcp-guardian/src-tauri/src/: guard_profiles.rs  lib.rs  main.rs  mcp_servers.rs  pending_messages.rs  server_collections.rs
mcp-guardian/src/components/: CLAUDE.md  ConfirmDialog.tsx  (+30 more)
nix/: mcp-guardian-cli.nix  mcp-guardian-proxy.nix  mcp-guardian.nix  vscode.nix
scripts/: get-version.sh  set-version.sh
(+77 files in other folders)
