[workspace]
members = [
    "mcp-guardian/src-tauri",
    "mcp-guardian-core",
    "mcp-guardian-cli",
    "mcp-guardian-proxy",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false # link-time-optimization: can turn this on for better runtime performance, but compile times longer
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[workspace.dependencies]
# workspace crates
mcp-guardian-core = { path = "./mcp-guardian-core" }
# general dependencies
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
clap = { version = "4", features = ["cargo", "derive"] }
confy = "0.6"
dirs = "5"
env_logger = "0.11"
humantime = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tabled = "0.15.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.12", features = ["v4"] }
