[package]
name = "mcp-guardian-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
# workspace crates
mcp-guardian-core = { workspace = true }
# general dependencies
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
