[package]
name = "mcp-guardian-core"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
confy = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
